src/scss/_homeMainSection.scss
.main-section {
  font-size: 1.6rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  height: 100vh;
  background-image: url("../assets/box_image.png");
  background-repeat: no-repeat;
  background-position: left;
  background-size: auto;
  background-position-x: -48rem;
  &__right-col {
    display: flex;
    justify-content: flex-end;
    transform: translateX(-25%);
  }
  &__heading{
    font-size: 3.8rem;
    color: $main-text-color;
    text-align: center;
  }
  &__right-col {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    margin-top: 7rem;
  }
  &__heading-bottom{
    margin-bottom: 10rem;
  }
  &__button-container{
    display: flex;
    gap: 5rem;
  }
}
@media (max-width: 1400px){
  .main-section{
    margin-top: 0;
    &::before{
      content: " ";
      position: absolute;
      background-color: rgba(255, 255, 255, 0.8);
      height: 90rem;
      width: 100%;
      z-index: 0;
    }
    &__right-col{
      transform: translateX(0);
      margin: 0 auto;
    }
  }
}
@media (max-width: 800px) {
  .main-section {
    height: 45rem;

    &::before{
      height: 45rem;
    }
    &__heading{
      font-size: 3rem;
    }


  }
}

